fix: dark mode not auto detecting

--- a/output.css
+++ b/output.css
@@ -1085,13 +1085,6 @@ video {
   --tw-prose-invert-td-borders: #44403c;
 }
 
-.prose-stone-dark {
-  --tw-prose-body: #f5f5f4;
-  --tw-prose-headings: #fff;
-  --tw-prose-pre-bg: #292524;
-  background-color: #1c1917;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
